--- a/carrot_clone/requirements.txt
+++ b/carrot_clone/requirements.txt
@@ -31,3 +31,28 @@ redis==3.5.3
 requests==2.25.0
 sqlparse==0.3.1
 urllib3==1.26.2
+asgiref==3.2.10
+boto3==1.16.60
+botocore==1.19.60
+certifi==2020.11.8
+chardet==3.0.4
+coverage==5.3
+Django==3.1
+django-debug-toolbar==2.2
+django-redis==4.12.1
+django-storages==1.11.1
+djangorestframework==3.11.1
+djangorestframework-jwt==1.11.0
+idna==2.10
+jmespath==0.10.0
+mysqlclient==2.0.1
+Pillow==8.1.0
+PyJWT==1.7.1
+python-dateutil==2.8.1
+pytz==2020.1
+redis==3.5.3
+requests==2.25.0
+s3transfer==0.3.4
+six==1.15.0
+sqlparse==0.3.1
+urllib3==1.26.2
